compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unexpected_labelled_arg_record_constructor.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "type X { X(Int) } fn y() { X(a: 0) }"
---
----- SOURCE CODE
type X { X(Int) } fn y() { X(a: 0) }

----- ERROR
error: Unexpected labelled argument
  ┌─ /src/one/two.gleam:1:30
  │
1 │ type X { X(Int) } fn y() { X(a: 0) }
  │                              ^^^^

This argument has been given a label but the record constructor does
not expect any. Please remove the label `a`.
